# data4nz_make

./: .gitignore  README.md  pyproject.toml
dbt/emission_factors/: .gitignore  README.md  dbt_project.yml  packages.yml
dbt/emission_factors/macros/: add_text_index.sql  check_opdata_map_float_value.sql
dbt/emission_factors/models/: doc.md  models.yml  sources.yml
dbt/emission_factors/old_models/: datasets.sql  models.yml  sources.yml
dbt/emission_factors/seeds/: ef_requests.csv  test_ef_items.csv  test_ef_values.csv
dbt/emission_factors/tests/: test_with_antena_sheet_GWP.sql  test_with_dummy_values_1.sql
dbt/emission_factors/todo/: ecoinvent_row.sql  ef_merged.sql  negaoctet_aligned_gwp.sql  negaoctet_row.sql
dbt/organizations/: dbt_project.yml
dbt/organizations/macros/: add_text_index.sql
dbt/organizations/models/: models.yml  sources.yml
notebooks/: analytics.ipynb  injection.ipynb  scratchpad.ipynb
python/: requirements.txt
python/inject/: cdp_to_sql.py  cmd_from_dbt_model.py  ecoinvent_to_sql.py  negaoctet_to_sql.py
python/old/: create_pg_fts_indexes.py  simple_files_to_sql.py
python/transform/: data_model.py  sbt_target_processor.py
python/utils/: dbt_utils.py  excel_utils.py  geography.py  pandas_utils.py  sql_utils.py  string_utils.py  system_utils.py
z_dbt_old/emission_factors/lca_calculation/: opdata_ef_row_best_geo.sql  opdata_map_with_ef.sql
z_dbt_old/emission_factors/old_models/: emission_factors.sql  items_with_ext_desc.sql
z_dbt_old/organizations/: .gitignore
z_dbt_old/organizations/TODO/: map_cdp_isin_factcheck.sql  map_cdp_isin_factcheck_lei.sql  map_cdp_sdp_isin.sql  scope_1_2_3.sql  stg_sbt_companies.sql
(+65 files in other folders)
